# libseedfinding

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  install.bat  install.sh  lcg.h  libseedfindingConfig.cmake.in  seedfindinglibConfig.cmake.in
cmake/: gen_version.py  split.py
example/: CMakeLists.txt  main  main.cpp  test.cpp
include/: cache.h  chunkRandomReversal.h  kernels.cuh  lcg.h  noise.h  simplex.h  util.h  version.h.template
include/math/: bigInteger.h  bigMatrix.h  bigNumber.h
src/: CMakeLists.txt  dummy.cpp  kernels.cuh  lcg.h  seedfindinglib.h  util.h  version.h  version.h.template
test/: CMakeLists.txt  test.cpp  test.cu
test_cpp/: test.cpp
test_cuda/: CMakeLists.txt
